# Random

./: .gitignore  Makefile  README.md  main.py  models.py  pyproject.toml  storage.py  test_report.md
deployments/docker/: Dockerfile
deployments/kubernetes/helm/nexustask/: Chart.yaml
docs/adrs/: 0001-initial-cli.md  0012-migrate-to-sqlite.md  0045-introduce-postgres-and-sqlalchemy.md  0088-event-sourcing-for-audit.md  0102-extract-microservices.md  0156-adopt-fastapi-asyncio.md  0201-graphql-federation.md
src/nexustask/: __init__.py  config.py
src/nexustask/application/commands/: create_task.py
src/nexustask/application/queries/: get_tasks.py
src/nexustask/application/services/: massive_services.py
src/nexustask/core/domain/: events.py  value_objects.py
src/nexustask/core/ports/: event_bus.py  repository.py  search.py
src/nexustask/core/utils/: massive_utils.py
src/nexustask/infrastructure/: di.py  worker.py
src/nexustask/infrastructure/database/: massive_models.py  models.py  repository.py
src/nexustask/infrastructure/message_bus/: kafka_bus.py  kafka_producer.py
src/nexustask/infrastructure/search/: elasticsearch_service.py
tests/: test_api.py  test_jira_sync.py
tests/unit/: test_domain_rules_01.py  test_domain_rules_02.py  test_domain_rules_03.py  test_domain_rules_04.py  test_domain_rules_05.py  test_domain_rules_06.py  test_domain_rules_07.py  test_domain_rules_08.py  test_domain_rules_09.py  test_domain_rules_10.py  test_domain_rules_11.py  test_domain_rules_12.py  test_domain_rules_13.py  test_domain_rules_14.py  test_domain_rules_15.py  test_domain_rules_16.py  test_domain_rules_17.py  test_domain_rules_18.py  test_domain_rules_19.py  test_domain_rules_20.py  test_massive_entities.py
(+8 files in other folders)
